[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/View/StatsView.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Kenney Mini Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/dice/attack_01.png" type="Texture" id=3]
[ext_resource path="res://Sprites/battle_bg.png" type="Texture" id=4]
[ext_resource path="res://Sprites/dice/armor.png" type="Texture" id=6]
[ext_resource path="res://Sprites/health.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="StatsView" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -243.0
margin_top = -137.0
margin_right = 279.0
margin_bottom = 143.0
color = Color( 0, 0, 0, 0.705882 )

[node name="Tween" type="Tween" parent="."]

[node name="bg" type="NinePatchRect" parent="."]
margin_left = -128.0
margin_top = -80.0
margin_right = 128.0
margin_bottom = 89.0
texture = ExtResource( 4 )
patch_margin_left = 10
patch_margin_top = 20
patch_margin_right = 10
patch_margin_bottom = 20

[node name="InventoryTitle" type="Label" parent="."]
margin_left = -100.0
margin_top = -72.0
margin_right = 8.0
margin_bottom = -48.0
custom_colors/font_color = Color( 0.14902, 0.168627, 0.270588, 1 )
custom_fonts/font = SubResource( 1 )
text = "Inventory"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = -100.0
margin_top = -40.0
margin_right = 8.0
margin_bottom = 68.0
scroll_horizontal_enabled = false

[node name="DiceContainer" type="GridContainer" parent="ScrollContainer"]
columns = 4

[node name="StatsTitle" type="Label" parent="."]
margin_left = 32.0
margin_top = -72.0
margin_right = 96.0
margin_bottom = -48.0
custom_colors/font_color = Color( 0.14902, 0.168627, 0.270588, 1 )
custom_fonts/font = SubResource( 1 )
text = "Stats"
align = 1
valign = 1

[node name="StatsContainer" type="VBoxContainer" parent="."]
margin_left = 28.0
margin_top = -44.0
margin_right = 120.0
margin_bottom = 68.0
custom_constants/separation = 24

[node name="Health" type="Control" parent="StatsContainer"]
margin_right = 92.0

[node name="Health" type="Sprite" parent="StatsContainer/Health"]
position = Vector2( 10, 10 )
texture = ExtResource( 7 )

[node name="HealthLabel" type="Label" parent="StatsContainer/Health/Health"]
margin_left = 13.0
margin_top = -11.0
margin_right = 93.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0.819608, 0.819608, 0.819608, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "9999"
valign = 1
autowrap = true

[node name="Armor" type="Control" parent="StatsContainer"]
margin_top = 24.0
margin_right = 92.0
margin_bottom = 24.0

[node name="Armor" type="Sprite" parent="StatsContainer/Armor"]
position = Vector2( 10, 10 )
texture = ExtResource( 6 )

[node name="ArmorLabel" type="Label" parent="StatsContainer/Armor/Armor"]
margin_left = 13.0
margin_top = -11.0
margin_right = 93.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0.819608, 0.819608, 0.819608, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "9999"
valign = 1
autowrap = true

[node name="AD" type="Control" parent="StatsContainer"]
margin_top = 48.0
margin_right = 92.0
margin_bottom = 48.0

[node name="Atk" type="Sprite" parent="StatsContainer/AD"]
position = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="AtkLabel" type="Label" parent="StatsContainer/AD/Atk"]
margin_left = 13.0
margin_top = -10.0
margin_right = 93.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.819608, 0.819608, 0.819608, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "9999"
valign = 1
autowrap = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
